--- a/index.html
+++ b/index.html
@@ -11,57 +11,27 @@
 <nav class="navbar navbar-default">
   <div class="container-fluid">
     <div class="navbar-header">
-      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-        <span class="sr-only">Toggle navigation</span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-      </button>
       <a class="navbar-brand" href="#">SNAPGRID</a>
     </div>
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-      <ul class="nav navbar-nav">
-        <li class="active"><a href="#">Link <span class="sr-only">(current)</span></a></li>
-        <li><a href="#">Link</a></li>
-        <li class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
-          <ul class="dropdown-menu">
-            <li><a href="#">Action</a></li>
-            <li><a href="#">Another action</a></li>
-            <li><a href="#">Something else here</a></li>
-            <li role="separator" class="divider"></li>
-            <li><a href="#">Separated link</a></li>
-            <li role="separator" class="divider"></li>
-            <li><a href="#">One more separated link</a></li>
-          </ul>
+      <ul class="nav navbar-nav navbar-right">
+        <ul class="nav navbar-nav">
+        <li><a href="#">Home</a></li>
+        <li><a href="#">About</a></li>
+        <li><a href="#">Gallery</a></li>
+     	<li>
+         <button type="submit" class="btn btn-primary" class="submit">Submit</button>
         </li>
       </ul>
-      <form class="navbar-form navbar-left" role="search">
-        <div class="form-group">
-          <input type="text" class="form-control" placeholder="Search">
-        </div>
-        <button type="submit" class="btn btn-default">Submit</button>
-      </form>
-      <ul class="nav navbar-nav navbar-right">
-        <li><a href="#">Link</a></li>
-        <li class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
-          <ul class="dropdown-menu">
-            <li><a href="#">Action</a></li>
-            <li><a href="#">Another action</a></li>
-            <li><a href="#">Something else here</a></li>
-            <li role="separator" class="divider"></li>
-            <li><a href="#">Separated link</a></li>
-          </ul>
         </li>
       </ul>
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
 </nav>
-<div class="jumbotron"  >
-   <div class="container">
-   <h1>SnapGrid</h1>
-   <h3>Make your photography portfolio in minutes with just a few simple clicks.</h3>
+<div class="jumbotron">
+   <div class="container" class= "row">
+   <h1 class="col-md-8">SnapGrid</h1>
+   <h3 class="col-md-8">Make your photography portfolio in minutes with just a few simple clicks.</h3>
    </div>
 </div>
 <div class="container2">
@@ -118,7 +88,7 @@
 	</div>
 </div>
 <div class="jumbotron2">
-	<div class="container4" "col-sm-4">
+	<div class="container4" "col-sm-4" "col-sm-8">
    		<h3>Welcome to SnapGrid</h3>
    		<p>Lorem ipsum Officia elit dolor cillum dolor cupidatat occaecat elit ea Ut exercitation nisi voluptate culpa aliquip in occaecat aliquip Ut ut id ullamco deserunt ullamco laboris labore nisi ut officia id consectetur aute pariatur reprehenderit id laborum aliqua amet reprehenderit consequt qui mollit et.</p>
     
