Styling touch up

--- a/index2.html
+++ b/index2.html
@@ -1,147 +1,146 @@
 <!DOCTYPE html>
-<html>
-<head>
-	<title>Bootstrap Grid Take 2</title>
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
-<link rel="stylesheet" type="text/css" href="styles2/main.css">
-</head>
-<body>
-<nav class="navbar navbar-default">
-  <div class="container-fluid">
-    <!-- Brand and toggle get grouped for better mobile display -->
-    <div class="navbar-header">
-      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-        <span class="sr-only">Toggle navigation</span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-      </button>
-      <a class="navbar-brand" href="#">SNAPGRID</a>
-    </div>
-
-    <!-- Collect the nav links, forms, and other content for toggling -->
-    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-      <ul class="nav navbar-nav navbar-right">
-        <li><a href="#">Home</a></li>
-        <li><a href="#">About</a></li>
-        <li><a href="#">Gallery</a></li>
-        <button type="button" class="btn btn-primary navbar-btn">Login</button>
-      </ul>
-    </div><!-- /.navbar-collapse -->
-  </div><!-- /.container-fluid -->
-</nav>
-<div class="jumbotron">
-	<div class="row">
-		<div class="col-sm-6 col-sm-5">
-  			<span>SnapGrid</span>
-		</div>
-		<div class="col-sm-6 col-sm-6">
-  			<p>Make your photography portfolio in minuntes with just a few simple clicks.</p>
-		</div>
-	</div>
-</div>
-<div class="container">
-  <div class="row">
-    <div class="col-sm-8 col-sm-7">
-      <h3>SnapGrid is a clean and fully responsive template</h3>
-      <p>Lorem ipsum Eu ut ullamco proident voluptate nisi ullamco cupidatat labore sint incididunt in aliqua pariatur ut laborum eu mollit Ut consectetur tempor nostrud eu dolor veniam velit incididunt occaecat nisi pariatur aliqua aute do ad enim voluptate culpa  Excepteur dolor ut magna anim est id enim esse tempor sed irure tempor quis ut laboris cupidatat irure incididunt.</p>
-    </div>
+ <html>
+ <head>
+ 	<title>Bootstrap Grid Take 2</title>
+ <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" ntegrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
+ <link rel="stylesheet" type="text/css" href="styles2/main.css">
+ </head>
+ <body>
+ <nav class="navbar navbar-default">
+   <div class="container-fluid">
+     <!-- Brand and toggle get grouped for better mobile display -->
+     <div class="navbar-header">
+       <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-avbar-collapse-1" aria-expanded="false">
+         <span class="sr-only">Toggle navigation</span>
+         <span class="icon-bar"></span>
+         <span class="icon-bar"></span>
+         <span class="icon-bar"></span>
+       </button>
+       <a class="navbar-brand" href="#">SNAPGRID</a>
+     </div>
+ 
+     <!-- Collect the nav links, forms, and other content for toggling -->
+     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+       <ul class="nav navbar-nav navbar-right">
+         <li><a href="#">Home</a></li>
+         <li><a href="#">About</a></li>
+         <li><a href="#">Gallery</a></li>
+         <button type="button" class="btn btn-primary navbar-btn">Login</button>
+       </ul>
+     </div><!-- /.navbar-collapse -->
+   </div><!-- /.container-fluid -->
+ </nav>
+ <div class="jumbotron">
+ 	<div class="row">
+ 		<div class="col-sm-6 col-sm-5">
+   			<span>SnapGrid</span>
+ 		</div>
+ 		<div class="col-sm-6 col-sm-6">
+   			<p>Make your photography portfolio in minuntes with just a few simple clicks.</p>
+ 		</div>
+ 	</div>
+ </div>
+ <div class="container">
+   <div class="row">
+     <div class="col-sm-8 col-sm-7">
+       <h3>SnapGrid is a clean and fully responsive template</h3>
+       <p>Lorem ipsum Eu ut ullamco proident voluptate nisi ullamco cupidatat labore sint incididunt in aliqua pariatur ut laborum eu mollit Ut consectetur tempor nostrud eu dolor veniam velit incididunt occaecat nisi pariatur aliqua aute do ad enim voluptate culpa  Excepteur dolor ut magna anim est id enim esse tempor sed irure tempor quis ut laboris cupidatat irure incididunt.</p>
+     </div>
     <div class="col-sm-8 col-sm-5">
-	<button class="btn btn-primary" type="button">
-  		Download Now
-	</button>
-    </div>
-  </div>
-</div>
-<div class="container">
-	<div class="row">
-		<div class="well col-sm-10 col-sm-3">
-			<h3>HTML 5</h3>
-			<p>Lorem ipsum Ut voluptate dolor amet 	eu Ut est enim in laboris et amet 	incididunt adipisicing sint minim 	exercitation voluptate cillum officia.</p>
-		</div>
-		<div class="well col-sm-10 col-sm-3">
-			<h3>CSS 3</h3>
-			<p>Lorem ipsum Aliqua consequat aliqua 	eiusmod et proident nulla in magna 	reprehenderit fugiat dolor nisi sed 	aute est amet Excepteur ea et 	incididunt cillum.</p>
-		</div>
-		<div class="well col-sm-10 col-sm-3">
-			<h3>FULLY RESPONSIVE</h3>
-			<p>Lorem ipsum Do dolor commodo in 	cupidatat anim officia dolor deserunt 	esse id velit aliquip nisi cillum 	deserunt nulla aliquip .</p>
-		</div>
-	</div>
-</div>
-<div class="container3">
-		<div class="row">
-  			<div class="col-xs-6 col-md-3">
-      			<img class="thumbnail" src="https://github.com/TIY-Austin-Front-End-Engineering/bootstrap-grid/blob/master/images/thumb1.jpg?raw=true">
+ 	<button class="btn btn-primary" type="button">
+   		Download Now
+ 	</button>
+     </div>
+   </div>
+ </div>
+ <div class="container">
+ 	<div class="row">
+ 		<div class="well col-sm-10 col-sm-3">
+ 			<h3>HTML 5</h3>
+ 			<p>Lorem ipsum Ut voluptate dolor amet 	eu Ut est enim in laboris et amet 	incididunt adipisicing sint minim 	exercitation voluptate cillum officia.</p>
+ 		</div>
+ 		<div class="well col-sm-10 col-sm-3">
+ 			<h3>CSS 3</h3>
+ 			<p>Lorem ipsum Aliqua consequat aliqua 	eiusmod et proident nulla in magna 	reprehenderit fugiat dolor nisi sed 	aute est amet Excepteur ea et 	incididunt cillum.</p>
+ 		</div>
+ 		<div class="well col-sm-10 col-sm-3">
+ 			<h3>FULLY RESPONSIVE</h3>
+ 			<p>Lorem ipsum Do dolor commodo in 	cupidatat anim officia dolor deserunt 	esse id velit aliquip nisi cillum 	deserunt nulla aliquip .</p>
+ 		</div>
+ 	</div>
+ </div>
+ <div class="container3">
+ 		<div class="row">
+   			<div class="col-xs-6 col-md-3">
+       			<img class="thumbnail" src="https://github.com/TIY-Austin-Front-End-Engineering/bootstrap-grid/blob/master/images/thumb1.jpg?raw=true">
       			Dog on a walk
   			</div>
   			<div class="col-xs-6 col-md-3">
       			<img class="thumbnail" src="https://github.com/TIY-Austin-Front-End-Engineering/bootstrap-grid/blob/master/images/thumb2.jpg?raw=true">
-      			A delicious meal
-  			</div>
-  			<div class="col-xs-6 col-md-3">
-      			<img class="thumbnail" src="https://github.com/TIY-Austin-Front-End-Engineering/bootstrap-grid/blob/master/images/thumb3.jpg?raw=true">
-      			Starry Night
-  			</div>
-  			<div class="col-xs-6 col-md-3">
-      			<img class="thumbnail" src="https://github.com/TIY-Austin-Front-End-Engineering/bootstrap-grid/blob/master/images/thumb4.jpg?raw=true">
-      			One with nature
-  			</div>
-		</div>
-</div>
-<div class="jumbotron2">
-	<div class="container4">
-		<div class="row">
-			<div class="col-sm-10 col-sm-8">
-   				<h3>Welcome to SnapGrid</h3>
-   				<p>Lorem ipsum Officia elit dolor cillum dolor cupidatat occaecat elit ea Ut exercitation nisi voluptate culpa aliquip in occaecat aliquip Ut ut id ullamco deserunt ullamco laboris labore nisi ut officia id consectetur aute pariatur reprehenderit id laborum aliqua amet reprehenderit consequt qui mollit et.</p>
+       			A delicious meal
    			</div>
-    		<div class="col-sm-10 col-sm-4">
-				<img class="girlBike" src="https://github.com/TIY-Austin-Front-End-Engineering/bootstrap-grid/blob/master/images/thumb5.jpg?raw=true">
-			</div>
-		</div>
-	</div>
-</div>
-<div class="jumbotron3">
-	<div class="row">
-		<div class="col-sm-12 col-sm-4">
-			<h4>SnapGrid</h4>
-				<p>Lorem ipsum Cillum esse ex ad ea sit 	eiusmod 	in ut ut ullamco ullamco sunt qui 	enim non eu et 	sunt nisi sunt adipisicing 	dolore sint minim 	labore quis aliqua 	consequat eiusmod enim 	reprehenderit 	deserunt ad dolore exercitation 		reprehenderit.</p>
-		</div>
-		<div class="col-sm-12 col-sm-4">
-			<h4>About Us</h4>
-				<p>
-				<a href="#">Latest Posts</a>
-				</p>
-				<p>
-				<a href="#">Community Content</a>
-				</p>
-				<p>
-				<a href="#">Job Openings</a>
-				</p>
-		</div>
-		<div class="col-sm-12 col-sm-4">
-			<h4>Contact Us</h4>
-				<p>
-					5555 S. Congress Blvd.
-				</p>
-				<p>
-					Austin, TX 78704
-				</p>
-				<p>
-					555 - 555 - 5555
-				</p>
-				<p>
-					info@snapgrid.com
-				</p>
-		</div>
-	</div>
-</div>
-
-
-<script   src="https://code.jquery.com/jquery-2.2.1.min.js"   integrity="sha256-gvQgAFzTH6trSrAWoH1iPo9Xc96QxSZ3feW6kem+O00="   crossorigin="anonymous"></script>
-
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
-
-</body>
-</html>
+   			<div class="col-xs-6 col-md-3">
+       			<img class="thumbnail" src="https://github.com/TIY-Austin-Front-End-Engineering/bootstrap-grid/blob/master/images/thumb3.jpg?raw=true">
+       			Starry Night
+   			</div>
+   			<div class="col-xs-6 col-md-3">
+       			<img class="thumbnail" src="https://github.com/TIY-Austin-Front-End-Engineering/bootstrap-grid/blob/master/images/thumb4.jpg?raw=true">
+       			One with nature
+   			</div>
+ 		</div>
+ </div>
+ <div class="jumbotron2">
+ 	<div class="container4">
+ 		<div class="row">
+ 			<div class="col-sm-10 col-sm-8">
+    				<h3>Welcome to SnapGrid</h3>
+    				<p>Lorem ipsum Officia elit dolor cillum dolor cupidatat occaecat elit ea Ut exercitation nisi voluptate culpa aliquip in occaecat aliquip Ut ut id ullamco deserunt ullamco laboris labore nisi ut officia id consectetur aute pariatur reprehenderit id laborum aliqua amet reprehenderit consequt qui mollit et.</p>
+   			</div>
+     		<div class="col-sm-10 col-sm-4">
+ 				<img class="girlBike" src="https://github.com/TIY-Austin-Front-End-Engineering/bootstrap-grid/blob/master/images/thumb5.jpg?raw=true">
+ 			</div>
+ 		</div>
+ 	</div>
+ </div>
+ <div class="jumbotron3">
+ 	<div class="row">
+ 		<div class="col-sm-12 col-sm-4">
+ 			<h4>SnapGrid</h4>
+ 				<p>Lorem ipsum Cillum esse ex ad ea sit 	eiusmod 	in ut ut ullamco ullamco sunt qui 	enim non eu et 	sunt nisi sunt adipisicing 	dolore sint minim 	labore quis aliqua 	consequat eiusmod enim 	reprehenderit 	deserunt ad dolore exercitation 		reprehenderit.</p>
+ 		</div>
+ 		<div class="col-sm-12 col-sm-4">
+ 			<h4>About Us</h4>
+ 				<p>
+ 				<a href="#">Latest Posts</a>
+ 				</p>
+ 				<p>
+ 				<a href="#">Community Content</a>
+ 				</p>
+ 				<p>
+ 				<a href="#">Job Openings</a>
+ 				</p>
+ 		</div>
+ 		<div class="col-sm-12 col-sm-4">
+ 			<h4>Contact Us</h4>
+ 				<p>
+ 					5555 S. Congress Blvd.
+ 				</p>
+ 				<p>
+ 					Austin, TX 78704
+ 				</p>
+ 				<p>
+ 					555 - 555 - 5555
+ 				</p>
+ 				<p>
+ 					info@snapgrid.com
+ 				</p>
+ 		</div>
+ 	</div>
+ </div>
+ 
+ 
+ <script   src="https://code.jquery.com/jquery-2.2.1.min.js"   integrity="sha256-gvQgAFzTH6trSrAWoH1iPo9Xc96QxSZ3feW6kem+O00="   crossorigin="anonymous"></script>
+ 
+ <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
+ </body>
+ </html> 
